# mindrl

./: .flake8  .pre-commit-config.yaml  CMakeLists.txt  OWNERS  README.md  README_CN.md  RELEASE.md  RELEASE_CN.md  build.sh  pylintrc  requirements.txt  setup.py
mindspore_rl/: CMakeLists.txt  __init__.py  version.py
mindspore_rl/agent/: __init__.py  actor.py  agent.py  learner.py  trainer.py
mindspore_rl/algorithm/a2c/: __init__.py  a2c.py  a2c_session.py  a2c_trainer.py  config.py
mindspore_rl/algorithm/a3c/: a3c.py  a3c_session.py  a3c_trainer.py  config.py
mindspore_rl/algorithm/a3c_single/: __init__.py  a2c.py  a2c_session.py  a3c_single_trainer.py  config.py
mindspore_rl/algorithm/ac/: __init__.py  ac.py  ac_session.py  ac_trainer.py  config.py
mindspore_rl/algorithm/awac/: __init__.py  (+4 more)
mindspore_rl/core/: __init__.py  msrl.py  priority_replay_buffer.py  reservoir_replay_buffer.py  session.py  uniform_replay_buffer.py
mindspore_rl/distribution/: .gitignore  README.md  README_CN.md  __init__.py
mindspore_rl/environment/: __init__.py  _remote_env_wrapper.py  action_norm_wrapper.py  action_repeat_wrapper.py  async_parallel_wrapper.py  batch_wrapper.py  dmc_environment.py  env_process.py  environment.py  gym_environment.py  ms_environment.py  multi_environment_wrapper.py  petting_zoo_mpe_environment.py  process_environment.py  pyfunc_wrapper.py  python_environment.py  random_environment.py  registration.py  sc2_environment.py  space.py  space_adapter.py  sync_parallel_wrapper.py  tag_environment.py  tic_tac_toe_environment.py  wrapper.py
mindspore_rl/network/: __init__.py  _rnns.py  fully_connected_net.py  gru_net.py
mindspore_rl/policy/: __init__.py  epsilon_greedy_policy.py  greedy_policy.py  policy.py  random_policy.py
mindspore_rl/utils/: __init__.py  batch_read_write.py  callback.py  discounted_return.py  n_step_buffer.py  noise.py  soft_update.py  tensor_array.py  tensors_queue.py  utils.py
(+341 files in other folders)
